--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.4",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.4.2",
     "styled-components": "^5.3.1",
     "typeit-react": "^2.0.3",
     "web-vitals": "^1.1.2"
