--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.3",
+    "eslint": "^8.9.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "prettier": "2.5.1",
     "standard": "^16.0.4"
   }
 }
