--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-responsive": "^9.0.0-beta.4",
-    "react-scripts": "4.0.3",
+    "react-responsive": "^9.0.0-beta.10",
+    "react-scripts": "5.0.1",
     "react-spring": "^9.4.2",
     "styled-components": "^5.3.1",
     "typeit-react": "^2.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "standard": "standard \"**/*.js\" --fix",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "eslintConfig": {
     "extends": [
@@ -48,10 +48,9 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.3",
-    "eslint": "^8.9.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "prettier": "2.5.1",
-    "standard": "^16.0.4"
+    "prettier": "^2.6.2"
   }
 }
