--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 2021,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "plugins": [
@@ -20,6 +20,12 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-console": "error"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
